[package]
name = "bevy_voxel"
version = "0.1.0"
authors = ["Szymon Walter <waltersz@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "A bundle of bevy plugins for voxel-based games"
repository = "https://github.com/walterpie/bevy_voxel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
line_drawing = "0.8"
noise = "0.6"
int_traits = "0.1"
rstar = "0.8"
either = "1.6"
rayon = "1.4"
uuid = "0.8.1"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"

[dependencies.bevy_fly_camera]
path = "../bevy_fly_camera"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[dependencies.ron]
version = "0.6"
optional = true

[dependencies.flate2]
version = "1.0"
optional = true

[features]
default = ["savedata"]
savedata = ["serde", "bincode", "flate2", "ron"]
